# github-ssh-auth

./: .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS  CHANGELOG  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  release.py  setup.cfg  setup.py  tox.ini
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml  main.yml  python-app.yml
github_ssh_auth/: __init__.py  _static_version.py  _version.py  cli.py
src/github_ssh_auth/: __init__.py  _static_version.py  _version.py  cli.py
test/: empty_cache_file.cfg  test_cli_auth.py  test_cli_init.py  test_cli_update.py
tests/: bad_credentials.cfg  conftest.py  empty_cache_file.cfg  no_cache_file.cfg  test_cli_auth.py  test_cli_init.py  test_cli_update.py  use_default_cache.cfg
