[metadata]
name = github-ssh-auth
description= Authenticate SSH users using their GitHub keys
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/oorabona/github-ssh-auth
author = Olivier Orabona
author_email = olivier.orabona@gmail.com
maintainer = Olivier Orabona
maintainer_email = olivier.orabona@gmail.com
license_files = LICENSE
platforms = any
classifiers =
    "Programming Language :: Python :: 3",
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Topic :: System :: Systems Administration",
    "Topic :: System :: Systems Administration :: Authentication/Directory",
    "Topic :: System :: Shells",
    "Topic :: Security"
keywords = github, ssh, Authentication
project_urls =
    Source=https://github.com/oorabona/github-ssh-auth
    Tracker=https://github.com/oorabona/github-ssh-auth/issues
    Changelog=https://github.com/oorabona/github-ssh-auth/releases

[options]
include_package_data = True
packages = find:
install_requires =
    click>=7.0
    PyGithub>=1.2.0
    configparser
python_requires = >=3.6

[options.entry_points]
console_scripts =
    github-ssh = github_ssh_auth.cli:cli
    github-ssh-update = github_ssh_auth.cli:update
    github-ssh-auth = github_ssh_auth.cli:auth
    ; github-ssh-init = github_ssh_auth.cli:init

[options.packages.find]
where = github_ssh_auth

[options.extras_require]
docs =
    pygments-github-lexers>=0.0.5
    sphinx>=2.0.0
    sphinxcontrib-autoprogram>=0.1.5
    towncrier>=18.5.0
testing =
    flaky>=3.4.0
    pytest>=4.0.0
    pytest-cov>=2.5.1
    pathlib2>=2.3.3;python_version<"3.4"
    psutil>=5.6.1;platform_python_implementation=="cpython"

[bdist_wheel]
universal = 1